修复会话机制bug，序列化机制需要指定字符串默认编码file.encoding和sun.jnu.encoding -Xms256m -Xmx1024m -XX:PermSize=256M -XX:MaxPermSize=512M -Dfile.encoding=UTF-8  -Dsun.jnu.encoding=UTF-8